--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
       "name": "todo-app",
       "scripts": {
-            "dev": "vite"
+            "dev": "node index.js"
       },
       "dependencies": {
-            "vue": "^3.2.41"
-      },
-      "devDependencies": {
-            "vite": "^6.0.3"
+            "express": "^4.21.2",
+            "sqlite3": "^5.1.7"
       }
 }
